--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,13 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
   material_design_icons_flutter: 6.0.7096
   curved_navigation_bar: ^1.0.3
   persistent_bottom_nav_bar: ^5.0.2
+  video_player: ^2.5.3
+  image_picker: ^0.8.6+4
+
 
 dev_dependencies:
   flutter_test:
